tests/ui/plyread_reject_isize.stderr
error: Unsupported field type for PlyAccess. Supported types: i8, u8, i16, u16, i32, u32, f32, f64, and Vec<T> of these.
 --> tests/ui/plyread_reject_isize.rs:5:10
  |
5 |     foo: isize,
  |          ^^^^^
