tests/ui/plyread_reject_isize.rs
use ply_rs_bw::PlyRead;

#[derive(PlyRead)]
struct Element {
    foo: isize,
}

fn main() {}
